--- a/apps/ninjatrader-addon/PayoutKingAddOn/PayoutKingAddOn.csproj
+++ b/apps/ninjatrader-addon/PayoutKingAddOn/PayoutKingAddOn.csproj
@@ -13,6 +13,10 @@
       <HintPath>C:\Program Files (x86)\NinjaTrader 8\bin\NinjaTrader.Core.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="NinjaTrader.Cbi">
+      <HintPath>C:\Program Files (x86)\NinjaTrader 8\bin\NinjaTrader.Cbi.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="NinjaTrader.Gui">
       <HintPath>C:\Program Files (x86)\NinjaTrader 8\bin\NinjaTrader.Gui.dll</HintPath>
       <Private>False</Private>
